translated qr/[id]/page.tsx

--- a/locales/en/qrcode.json
+++ b/locales/en/qrcode.json
@@ -1,3 +1,5 @@
 {
-    "qrCodeNotFound": "The requested QR code could not be found."
+    "qrCodeNotFound": "The QR code you are looking for could not be found",
+    "qrCodeNotFoundHeading": "QR Code Not Found",
+    "multipleUrlsFoundHeading": "Multiple URLs Found"
 }
